added /api/refresh to openapi
